here the menu bar get seted and also make responsive

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 </div>
 <!-- here the navbar starts -->
- <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+ <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light ">
   <div class="container-fluid navbarwidth">
     <a class="navbar-brand" href="#">
       <img class="logoimage"src="./Images/Headerimage/logo.jpg" alt="here the logo image" >
@@ -86,7 +86,77 @@
     </div>
    
   </div>
+</nav> -->
+<!-- Navbar Starts -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid navbarwidth">
+    <a class="navbar-brand" href="#">
+      <img class="logoimage" src="./Images/Headerimage/logo.jpg" alt="logo image">
+    </a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 padding-width">
+
+        <!-- Buy Puppies -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="buyDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Buy Puppies
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="buyDropdown">
+            <li><a class="dropdown-item" href="#">New Puppy</a></li>
+            <li><a class="dropdown-item" href="#">Another Puppy</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">From Somewhere else</a></li>
+          </ul>
+        </li>
+
+        <!-- How We Work -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="workDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            How We Work
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="workDropdown">
+            <li><a class="dropdown-item" href="#">Have Pet House</a></li>
+            <li><a class="dropdown-item" href="#">Have Different Feeds</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Our Location</a></li>
+          </ul>
+        </li>
+
+        <!-- Other Menu Items -->
+        <li class="nav-item">
+          <a class="nav-link" href="#">FAQs</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Blog</a>
+        </li>
+
+        <!-- Clients Review -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="reviewDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Client Reviews
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="reviewDropdown">
+            <li><a class="dropdown-item" href="#">From London</a></li>
+            <li><a class="dropdown-item" href="#">From Italy</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">From Sri Lanka</a></li>
+          </ul>
+        </li>
+
+      </ul>
+      <form class="d-flex">
+        <button class="btn btn1 btn-dark" type="submit">718-323-7297</button>
+      </form>
+    </div>
+  </div>
 </nav>
+<!-- Navbar Ends -->
+
  <!-- here the navbar ends -->
   
 
@@ -506,7 +576,7 @@ Pawrade Puppy's Life</p>
     </div>
     <div class="footer-list-items-inner1">
 <ul>
-  <li><h5 class="footer-h5">Help</li>
+  <li><h5 class="footer-h5">Help</h5></li>
   <li>  <a href="#" class="footer-paragraph">Puppy City Process</a></li>
   <li>  <a href="#" class="footer-paragraph">FAQ </a></li>
   <li>  <a href="#" class="footer-paragraph">  Contact us</a></li>
